# ai-credentials-helper

./: .gitignore  README.md  credentials-helper  credentials-helper.sh  install.py  pyproject.toml
ai_credentials_helper/: cli.py  credentials.py
ai_credentials_helper/backends/: __init__.py  claude.py  codex.py
docs/superpowers/plans/: 2026-07-13-readme.md
docs/superpowers/specs/: 2026-07-13-readme-design.md
tests/: test_claude_backend.py  test_cli_agent.py  test_cli_live_transfer.py  test_codex_backend.py  test_credentials.py  test_transfer_crypto.py
