[project]
name = "ai-credentials-helper"
version = "1.0.0"
description = "Manage Claude Code OAuth credentials in the macOS Keychain"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42",  # AES-256-CBC + HMAC for encrypted credential transfer (--send/--receive)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 15
addopts = "--cov=ai_credentials_helper --cov-report=term-missing"

[project.scripts]
credentials-helper = "ai_credentials_helper.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "E731", "F841"]
